Fixed header bg img visibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ p {
     display: flex;
     justify-content: center;
     
-    background-image: url("/images/bg-header-desktop.png");
+    background-image: url("../images/bg-header-desktop.png");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: contain;
